--- a/config/settings-development.yml
+++ b/config/settings-development.yml
@@ -1,22 +1,22 @@
 # Changing this file necessitates a server restart
 name: "ReScience C"
-abbreviation: "ReScienceC"
+abbreviation: "ReScience C"
 issn: "2430-3658"
 tagline: "Reproducible Science is good. Replicated Science is better."
-logo_url: "/logo_large.png"
+logo_url: "https://joss.theoj.org/logo_large.png"
 url: "http://0.0.0.0:3000"
-editor_email: "admin@resciencec.org"
-noreply_email: "noreply@resciencec.org"
-twitter: "@ReScienceEds"
-mastodon_url: "https://fosstodon.org/@ReScienceC"
-#google_analytics: ""
+#editor_email: "joss.theoj@gmail.com"
+#noreply_email: "noreply@joss.theoj.org"
+#twitter: "@JOSS_TheOJ"
+#mastodon_url: "https://fosstodon.org/@JOSS"
+#google_analytics: "UA-47852178-4"
 github: "xuanxu/rescience"
-reviews: "aliadalabs/resciencec-reviews-testing"
-papers_repo: "aliadalabs/resciencec-papers-testing"
+reviews: "xuanxu/rescience-reviews-testing"
+papers_repo: "xuanxu/rescience-papers-testing"
 papers_html_url: "https://rescience.github.io/read/"
 reviewers_signup_url: "https://github.com/ReScience/ReScience/issues/27"
 product: "software" # the *thing* being submitted for review
-reviewers: "http://rescience.github.io/board/#reviewers"
+reviewers: "https://github.com/rescience/rescience.github.io/blob/sources/04-board.md"
 submission_enquiry: |-
   **Project repository URL:** INSERT YOUR REPOSITORY LINK HERE
 
