--- a/config/settings-development.yml
+++ b/config/settings-development.yml
@@ -1,26 +1,25 @@
 # Changing this file necessitates a server restart
-name: "Journal of Open Source Software"
-abbreviation: "JOSS"
-issn: "2475-9066"
-tagline: "a <strong>developer friendly</strong>, open access journal for research software packages."
+name: "ReScience C"
+abbreviation: "ReScience C"
+issn: "2430-3658"
+tagline: "Reproducible Science is good. Replicated Science is better."
 logo_url: "https://joss.theoj.org/logo_large.png"
 url: "http://0.0.0.0:3000"
-editor_email: "joss.theoj@gmail.com"
-noreply_email: "noreply@joss.theoj.org"
-twitter: "@JOSS_TheOJ"
-mastodon_url: "https://fosstodon.org/@JOSS"
-google_analytics: "UA-47852178-4"
-github: "openjournals/joss"
-reviews: "openjournals/joss-reviews-testing"
-papers_repo: "openjournals/joss-papers-testing"
-papers_html_url: "https://www.theoj.org/joss-papers"
-reviewers_url: "https://reviewers.joss.theoj.org"
-reviewers_signup_url: "https://reviewers.joss.theoj.org/join"
-reviewers_lookup_url: "https://reviewers.joss.theoj.org/lookup"
+#editor_email: "joss.theoj@gmail.com"
+#noreply_email: "noreply@joss.theoj.org"
+#twitter: "@JOSS_TheOJ"
+#mastodon_url: "https://fosstodon.org/@JOSS"
+#google_analytics: "UA-47852178-4"
+github: "xuanxu/rescience"
+reviews: "xuanxu/rescience-reviews-testing"
+papers_repo: "xuanxu/rescience-papers-testing"
+papers_html_url: "https://rescience.github.io/read/"
+reviewers_signup_url: "https://github.com/ReScience/ReScience/issues/27"
 product: "software" # the *thing* being submitted for review
+reviewers: "https://github.com/rescience/rescience.github.io/blob/sources/04-board.md"
 submission_enquiry: |-
   **Project repository URL:** INSERT YOUR REPOSITORY LINK HERE
 
-  Briefly describe your software, its research application and any questions you have about the JOSS submission criteria.
+  Briefly describe your software, its research application and any questions you have about the ReScience C submission criteria.
 paper_types: []
 bot_username: editorialbot
