--- a/config/settings-development.yml
+++ b/config/settings-development.yml
@@ -3,20 +3,20 @@ name: "ReScience C"
 abbreviation: "ReScience C"
 issn: "2430-3658"
 tagline: "Reproducible Science is good. Replicated Science is better."
-logo_url: "https://joss.theoj.org/logo_large.png"
+logo_url: "/logo_large.png"
 url: "http://0.0.0.0:3000"
-#editor_email: "joss.theoj@gmail.com"
-#noreply_email: "noreply@joss.theoj.org"
-#twitter: "@JOSS_TheOJ"
-#mastodon_url: "https://fosstodon.org/@JOSS"
-#google_analytics: "UA-47852178-4"
+editor_email: "admin@resciencec.org"
+noreply_email: "noreply@resciencec.org"
+twitter: "@RescienceC"
+mastodon_url: "https://fosstodon.org/@RescienceC"
+#google_analytics: ""
 github: "xuanxu/rescience"
-reviews: "xuanxu/rescience-reviews-testing"
-papers_repo: "xuanxu/rescience-papers-testing"
+reviews: "aliadalabs/resciencec-reviews-testing"
+papers_repo: "aliadalabs/resciencec-papers-testing"
 papers_html_url: "https://rescience.github.io/read/"
 reviewers_signup_url: "https://github.com/ReScience/ReScience/issues/27"
 product: "software" # the *thing* being submitted for review
-reviewers: "https://github.com/rescience/rescience.github.io/blob/sources/04-board.md"
+reviewers: "http://rescience.github.io/board/#reviewers"
 submission_enquiry: |-
   **Project repository URL:** INSERT YOUR REPOSITORY LINK HERE
 
