--- a/config/settings-test.yml
+++ b/config/settings-test.yml
@@ -7,8 +7,8 @@ logo_url: "/logo_large.png"
 url: "http://resciencec.org"
 editor_email: "admin@resciencec.org"
 noreply_email: "noreply@resciencec.org"
-twitter: "@RescienceC"
-mastodon_url: "https://fosstodon.org/@RescienceC"
+twitter: "@ReScienceEds"
+mastodon_url: "https://fosstodon.org/@ReScienceC"
 google_analytics: ""
 github: "xuanxu/rescience"
 reviews: "aliadalabs/resciencec-reviews-testing"
