--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -4,20 +4,19 @@ abbreviation: "ReScienceC"
 issn: "2430-3658"
 tagline: "Reproducible Science is good. Replicated Science is better."
 logo_url: "/logo_large.jpg"
-url: "https://resciencec.org"
-editor_email: "admin@resciencec.org"
-noreply_email: "noreply@resciencec.org"
-twitter: "@RescienceC"
+url: "https://resciencec.theoj.org"
+editor_email: "admin@resciencec.theoj.org"
+noreply_email: "noreply@resciencec.theoj.org"
+twitter: "@ReScienceEds"
 mastodon_url: "https://fosstodon.org/@RescienceC"
-#google_analytics: ""
-github: "xuanxu/rescience"
+google_analytics: ""
+github: "ReScience/ReScienceC"
 reviews: "aliadalabs/resciencec-reviews-testing"
 papers_repo: "aliadalabs/resciencec-papers-testing"
-papers_html_url: "https://rescience.github.io/read/"
+papers_html_url: "https://resciencec.theoj.org"
 reviewers_signup_url: "https://github.com/ReScience/ReScience/issues/27"
 product: "software" # the *thing* being submitted for review
-reviewers: "http://rescience.github.io/board/#reviewers"
-
+reviewers: "http://resciencec.theoj.org/about#reviewers"
 submission_enquiry: |-
   **Project repository URL:** INSERT YOUR REPOSITORY LINK HERE
 
