--- a/config/settings-test.yml
+++ b/config/settings-test.yml
@@ -3,17 +3,17 @@ name: "ReScience C"
 abbreviation: "ReScienceC"
 issn: "2430-3658"
 tagline: "Reproducible Science is good. Replicated Science is better."
-logo_url: "/logo_large.png"
-url: "http://resciencec.org"
-editor_email: "admin@resciencec.org"
-noreply_email: "noreply@resciencec.org"
+logo_url: "/logo_large.jpg"
+url: "https://resciencec.theoj.org"
+editor_email: "admin@resciencec.theoj.org"
+noreply_email: "noreply@resciencec.theoj.org"
 twitter: "@ReScienceEds"
 mastodon_url: "https://fosstodon.org/@ReScienceC"
 google_analytics: ""
-github: "xuanxu/rescience"
+github: "ReScience/ReScienceC"
 reviews: "aliadalabs/resciencec-reviews-testing"
 papers_repo: "aliadalabs/resciencec-papers-testing"
-papers_html_url: "https://rescience.github.io/read/"
+papers_html_url: "https://resciencec.theoj.org"
 reviewers_signup_url: "https://github.com/ReScience/ReScience/issues/27"
 product: "software" # the *thing* being submitted for review
 reviewers: "http://rescience.github.io/board/#reviewers"
