Update sender email

--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -5,8 +5,8 @@ issn: "2430-3658"
 tagline: "Reproducible Science is good. Replicated Science is better."
 logo_url: "/logo_large.jpg"
 url: "https://resciencec.theoj.org"
-editor_email: "admin@resciencec.theoj.org"
-noreply_email: "noreply@resciencec.theoj.org"
+editor_email: "editor@resciencec.theoj.org"
+noreply_email: "admin@theoj.org"
 twitter: "@ReScienceEds"
 mastodon_url: "https://fosstodon.org/@RescienceC"
 google_analytics: ""
