Update tracks specs

--- a/lib/tracks.yml
+++ b/lib/tracks.yml
@@ -204,7 +204,7 @@ tracks:
     eics:
     code: 2
     fields:
-      - Molecules of Life: Biological Mechanisms, Structures and Functions
+      - "Molecules of Life: Biological Mechanisms, Structures and Functions"
       - Macromolecular complexes
       - Biochemistry
       - DNA and RNA biology
